--- a/main.html
+++ b/main.html
@@ -12,10 +12,20 @@
 <body>
 
     <div class="dark-mode" onclick="dark()">
-        <input type="button" value="dark-mode" class="mode-button">
+        <input type="button" value="Dark-Mode" class="mode-button">
     </div>
 
+    <div class="title">
+        <h1>Rock Paper Scissors</h1>
+    </div>
+
+
     <div class="play" id="play">
+
+        <div class="Score" id="Score">
+                
+        </div>
+
         <div class="result"> </div>
 
         <div class="options" id="options">
