--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 
 <body>
 
-    <div class="dark-mode" onclick="dark()">
+    <!-- <div class="dark-mode" onclick="dark()">
         <input type="button" value="Dark-Mode" class="mode-button">
-    </div>
+    </div> -->
 
     <div class="title">
         <h1>Rock Paper Scissors</h1>
